http/tests/media/track-in-band-hls-metadata.html sometimes crashes after r251626 https://bugs.webkit.org/show_bug.cgi?id=203849 <rdar://problem/56889717>

Reviewed by Youenn Fablet.

No new tests, fixes existing test.

* platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(-[WebCoreAVFMovieObserver metadataOutput:didOutputTimedMetadataGroups:fromPlayerItemTrack:]): Return early if
m_player has been cleared.
(-[WebCoreAVFMovieObserver metadataCollector:didCollectDateRangeMetadataGroups:indexesOfNewGroups:indexesOfModifiedGroups:]):
Ditto.


Canonical link: https://commits.webkit.org/217213@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252059 268f45cc-cd09-0410-ab3c-d52691b4dbfc